--- a/css/style.css
+++ b/css/style.css
@@ -300,14 +300,14 @@ header {
     box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.1);
 }
 
-.service-details-sub.sub-left {
+/* .service-details-sub.sub-left {
     display: flex;
     justify-content: center;
     align-items: center;
     flex: 1 1;
-}
+} */
 
-.service-details-sub.sub-right {
+.service-details-sub {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -315,18 +315,18 @@ header {
     flex-direction: row-reverse;
 }
 
-.service-details-para.para-right {
+/* .service-details-para.para-right {
     text-align: left;
     margin-left: 0.25rem;
-}
+} */
 /* .service-details-icon.icon-right {
     /* margin-right: 0.25rem;
 }  */
 
 .service-details-para {
-    text-align: right;
+    text-align: left;
     width: 70%;
-    margin-right: 0.25rem;
+    margin-left: 0.25rem;
 }
 .service-details-para h4 {
     color: #b1b1b1;
@@ -334,16 +334,33 @@ header {
 }
 
 .service-details-icon {
-    font-size: 4.5em;
+    font-size: 4em;
     width: 30%;
     /* margin-left: 0.25rem; */
     display: flex;
     align-items: center;
     justify-content: center;
 }
+/* learn more button */
+.learn-more {
+    padding: 2rem 0;
+    text-align: center;
+}
+.learn-more-btn {
+    border: 2px solid #b1b1b1;
+    background-color: var(--white-color-light);
+    padding: 0.5rem 1rem;
+    border-radius: 1.5rem;
+    font-weight: 700;
+    transition: all 0.2s ease-in-out;
+}
+.learn-more-btn:hover {
+    background-color: var(--secondary-color-light);
+    color: var(--white-color);
+}
 
 /* FEATURE THREE learn more */
-.feature-three {
+/* .feature-three {
     background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('../images/img-7.jpg');
     background-repeat: no-repeat;
     background-position: center center;
@@ -372,12 +389,20 @@ header {
 .training-btn:hover {
     background-color: var(--secondary-color-light);
     color: inherit;
-}
+} */
 
 /* OUR VALUE SECTION */
-
+.feature-four {
+    background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('../images/img-7.jpg');
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    background-attachment: fixed;
+    width: 100%;
+    color: var(--white-color);
+}
 .value-details-main {
-    margin-top: 1.5rem;
+    margin: 2rem 0;
 }
 
 .value-details-sub {
@@ -385,11 +410,13 @@ header {
     text-align: center;
     margin: 0.75rem;
     padding: 1rem;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: var(--white-color-light);
     transition: all 0.3s ease-in-out;
 }
 .value-details-sub:hover {
-    background-color: var(--text-color);
-    color: var(--white-color-light);
+    background-color: var(--white-color);
+    color: var(--text-color);
 }
 .value-details-sub::after {
     position: absolute;
@@ -399,7 +426,7 @@ header {
 }
 .value-details-sub:hover::after {
     transition-duration: 1s;
-    border-bottom: 2.5rem solid var(--white-color-light);
+    border-bottom: 2.5rem solid var(--text-color);
     border-right: 2.5rem solid var(--secondary-color-light);
 }
 
@@ -500,7 +527,7 @@ footer {
     }
 
     .feature {
-        padding: 2rem 4rem;
+        padding: 3rem 4rem;
     }
 
     /* header media */
@@ -560,10 +587,10 @@ footer {
         align-items: center;
     }
 
-    .service-details-sub.sub-left {
+    /* .service-details-sub.sub-left {
         margin-right: 1.5rem;
-    }
-    .service-details-sub.sub-right {
+    } */
+    .service-details-sub {
         margin-left: 1.5rem;
     }
 
